--- a/.github/workflows/booking.html
+++ b/.github/workflows/booking.html
@@ -415,14 +415,14 @@
                             <div class="p-5" id="list" visable="false">
                             <form class="parkinglot" action="/register" method="post" >
                                 <div class="form-group">
-                                	<!--
+                                	
                                 	<input  type="hidden" class="form-control form-control-user" id="bookerId" value="1" >
-                                	<input  type="hidden" class="form-control form-control-user" id="bookerName" value="나일등" >
-                                	-->
+                                	<input  type="hidden" class="form-control form-control-user" id="bookerName" value="나일등" >                                	
                                 	<input  type="hidden" class="form-control form-control-user" id="parkingLotId" value="1" >
-                                    <input  type="text" class="form-control form-control-user" id="parkingLotName" value="SK(주)" >
+                                    <input  type="text" class="form-control form-control-user" id="parkingLotName" placeholder="주차장명" disabled>
+                                    <input  type="text" class="form-control form-control-user" id="address" placeholder="주소" disabled>
                                     <hr>                                                                        
-                                    <input type="text" class="form-control form-control-user" id="capacity" placeholder="주차공간 200" readonly>
+                                    <input type="text" class="form-control form-control-user" id="capacity" placeholder="주차공간" readonly>
                                     <hr>
                                     <input type="text" class="form-control form-control-user" id="openTime" placeholder="오픈시간" readonly>
                                     <hr>
